cabal-version:      3.0
name:               tasty-tutorial
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             Ian Burzynski
maintainer:         23251244+iburzynski@users.noreply.github.com
-- copyright:
category:           Testing
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common depends
    build-depends: 
      base ^>=4.16.4.0,
      exceptions,
      optparse-applicative,
      split

common warnings
    ghc-options: -Wall -Wno-type-defaults

library
    import:           depends, warnings
    exposed-modules:  IPTypes, LookupIP, ParseIP
    -- other-modules:
    -- other-extensions:
    build-depends:    
    hs-source-dirs:   src
    default-language: Haskell2010

executable tasty-tutorial
    import:           depends, warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        tasty-tutorial

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite tasty-tutorial-test
    import:           depends, warnings
    default-language: Haskell2010
    other-modules:    LookupIPSpec, ParseIPSpec
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   tests
    main-is:          Main.hs
    build-depends:
        tasty-tutorial,
        hspec,
        tasty,
        tasty-hspec
